--- a/modulo-3/astromatch/package.json
+++ b/modulo-3/astromatch/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
