--- a/modulo-4/intro-express/package.json
+++ b/modulo-4/intro-express/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node-dev ./src/index.ts",
-    "start": "node ./build/index.js",
-    "build": "tsc"
+    "start": "tsc && node build/index.js",
+    "arrays": "tsc && node build/arrays.js",
+    "posts" : "tsc && node build/posts.js"
   },
   "keywords": [],
   "author": "Larissa Lanes",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.10",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
-    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13"
   }
 }
