--- a/modulo-4/async-await-promises/package.json
+++ b/modulo-4/async-await-promises/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "clear && ts-node-dev ./src/index.ts",
-	  "start": "tsc && node ./build/index.js"
+    "ex1": "tsc && node ./build/ex1.js",
+    "ex2": "tsc && node ./build/ex2.js",
+    "ex3": "tsc && node ./build/ex3.js",
+    "ex4": "tsc && node ./build/ex4.js",
+    "ex5": "tsc && node ./build/ex5.js"
+
   },
   "keywords": [],
   "author": "Larissa Lanes",
