--- a/modulo-5/arquitetura-de-software/package.json
+++ b/modulo-5/arquitetura-de-software/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "start": "tsc && node --inspect ./build/index.js",
-        "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts"
+        "dev-start": "ts-node-dev ./src/index.ts"
+      
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
