--- a/modulo-5/Labook/package.json
+++ b/modulo-5/Labook/package.json
@@ -4,11 +4,9 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "migrations": "tsc && node ./build/migrations.js",
-      "start": "npm run build && node --inspect ./build/src/index.js",
-      "dev": "clear && ts-node-dev ./src/index.ts",
-      "build": "clear && echo \"Transpiling files...\" && tsc && echo \"Done!\" ",
-      "test": "jest"
+      "start": "tsc && node build/index.js",
+      "dev-start": "ts-node-dev ./src/index.ts",
+      "migrations": "tsc && node ./build/migrations"
    },
    "keywords": [],
    "author": "",
