--- a/modulo-6/case-2/package.json
+++ b/modulo-6/case-2/package.json
@@ -1,34 +1,52 @@
 {
-  "name": "case-2",
+  "name": "wirecard-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "clear && echo \"Running tests...\" && jest",
+    "jest": "jest",
+    "start": "tsc & node build/index.js",
+    "build": "tsc",
+    "dev": "tsnd src/index.ts",
+    "migrations": "tsnd src/migrations.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LarissaLanes/Wirecard-API.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "larissa-lanes",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LarissaLanes/Wirecard-API/issues"
+  },
+  "homepage": "https://github.com/LarissaLanes/Wirecard-API#readme",
   "dependencies": {
-    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "heroku": "^7.60.1",
+    "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.4",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/uuid": "^8.3.4",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
+    "@types/knex": "^0.16.1",
+    "@types/node": "^17.0.23",
+    "@types/uuid": "^8.3.4"
   }
 }
