--- a/modulo-6/case-4/package.json
+++ b/modulo-6/case-4/package.json
@@ -7,7 +7,8 @@
     "start": "tsc & node build/index.js",
     "dev": "tsnd src/index.ts",
     "build": "tsc",
-    "migrations": "tsnd src/migrations.ts"
+    "migrations": "tsnd src/migrations.ts",
+    "populate": "tsnd src/populate.ts"
   },
   "keywords": [],
   "author": "Larissa Lanes",
