--- a/modulo-6/case-4/package.json
+++ b/modulo-6/case-4/package.json
@@ -8,7 +8,9 @@
     "dev": "tsnd src/index.ts",
     "build": "tsc",
     "migrations": "tsnd src/migrations.ts",
-    "populate": "tsnd src/populate.ts"
+    "populate": "tsnd src/populate.ts",
+    "jest": "jest",
+    "test": "clear && echo \"Running tests...\" && jest"
   },
   "keywords": [],
   "author": "Larissa Lanes",
@@ -18,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
     "mysql": "^2.18.1",
@@ -31,6 +34,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
     "@types/node": "^17.0.23",
